# SupplyMind

./: .dockerignore  .env.example  .gitignore  ALIENWARE_KICKOFF.md  AUDIT_PLAN.md  AUTORESEARCH_SUMMARY.md  BENCHMARKS_VS_PUBLIC.md  DATA_SOURCES.md  DEPLOY_HF_SPACE.md  Dockerfile  Dockerfile.damocles  EXTERNAL_CREDIBILITY.md  FAILURE_TABLE.md  FINAL_DEMO.md  JUDGES.md  LICENSE  MODEL_CARD.md  Makefile  PYTORCH_STORY.md  README.md  REPORT_REAL_V2.md  RESULTS.md  SUPPLYMIND_BLUEPRINT.md  baseline.py  client.py  comparison.md  docker-compose.yml  inference.py  models.py  openenv.yaml  pyproject.toml  requirements-damocles.txt  requirements-rl.txt  requirements.txt  scripted_agent.py  train_phase_o.py  train_phase_omega.py  train_phase_p.py  train_phase_q.py  train_phase_u.py  (+3 more)
.github/workflows/: codeql.yml  deploy-hf-space.yml  (+1 more)
.github/workflows-disabled/: benchmark-regression.yml.disabled  ci.yml.disabled
FINAL_SUBMIT/: ALL_250_FEATURES_LIVE_PROOF.md  ARCHITECTURE.md  BENCHMARK_REPORT.md  Blog.MD  CITATIONS.bib  DATASET_CARD.md  DEMO_SCRIPT_90S.md  ENV_CARD.md  EXEC_SUMMARY_ONE_PAGE.md  FEATURE_AUDIT_TICK_MATRIX_250.md  FEATURE_INVENTORY.md  FEATURE_INVENTORY_DI.md  FEATURE_INVENTORY_JT.md  FEATURE_INVENTORY_UBB.md  HACKATHON_README.md  HONEST_LIMITATIONS.md  HYPERMODE_DEEP_AUDIT_PASS22.md  JUDGE_4MIN_SCRIPT.md  JUDGE_DASHBOARD.html  JUDGE_FAQ_30.md  MASTER_FEATURE_USECASE_MAP_250.md  MASTER_UPGRADE_PLAN_PASS22.md  MODEL_CARD.md  NOTEBOOKLM_4SLIDE_SUPERHERO_PROMPT.md  NOTEBOOKLM_CONTEXT_FOR_VIDEO.md  PITCH_DECK.md  README.md  RELIANCE_HORMUZ_DEEP_DIVE.md  REPRODUCE.md  REPRODUCE_ONE_BASH.sh  RL_GUIDE_59POINT_ALIGNMENT.md  SLIDE_DECK.md  SOCIAL_POSTS.md  WAR_ROOM_PLAYBOOK.md
ShAuRyA_Supplymind/: README.md  RELEASE_NOTES_V4.md  __init__.py
_dump/: R6_GETHSEMANE_MEDIUM_300K.json  _phase4c_pass2.py  _phase4c_pass3.py  _phase4c_pass4.py  _phase4c_rewrite.py
client/: __init__.py  supplymind_client.py
dashboard/: app.py
demo/: DEMO_VIDEO_SCRIPT.md
docs/: CLONE_AND_STUDY.md  FINAL_AUDIT_REPORT.md  MULTI_TURN_GRPO_ROADMAP.md  OLLAMA_FINE_TUNING_FINAL_UPGRADE.md  PASS_7_SUMMARY.md  RAP_XC_DESIGN.md  _config.yml  index.html  index.md
notebooks/: 04_v3_quickstart_colab.ipynb  05_v4_hormuz_live.ipynb  06_trl_training_colab.ipynb  07_HACKATHON_TRAINING.ipynb  10_PRO_COLAB_KILLSHOT.ipynb  13_MASTER_HACKATHON_FINAL.ipynb
rl/: autoresearch_final.json  autoresearch_summary.py  explainer.py  train_rl_baselines.py
scripts/: bootstrap_leaderboard.py  calibrate_conformal_from_harvest.py  compute_cross_corpus_alpha.py  compute_panel_agreement.py  export_all_onnx.py  final_adversarial_20suite.py  final_conformal_multilevel.py  final_real_reinforce_wordle.py  final_real_reinforce_wordle_v2.py  final_validation_bundle.py  generate_hackathon_plots.py  ollama_v5_vs_frontier.py  openai_client.py  openrouter_client.py  pass20_grand_final.py  pass22_full_squeeze.py  push_to_hf_space.py  push_to_hf_space_minimal.py  release_assets.sh  reproduce.md  run_all.py  run_frontier_judge_panel.py  validate_ensemble_brent.py  validate_war_room.py  verify_lora_merge.py  verify_ollama_finetuning_stack.py  verify_openrouter_models.py
server/: app.py  integrated_agent.py  openenv_adapter.py  openenv_mcp_wrapper.py  supply_environment.py
supplymind.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
tests/: test_engine.py  test_graders.py  test_models.py  test_ollama_finetuning_stack.py  test_openenv_compliance.py  test_reward_hacking_adversarial.py  test_server.py  test_tasks.py  test_upgrades.py
v3_arcadia/: train_v3_block2_forecasting.py  train_v3_block4_rag.py
(+796 files in other folders)
